tests/checker/fail/ambiguous_http_entry.ow
use oneway/std/http/Headers
use oneway/std/http/Request
use oneway/std/http/Response
use oneway/std/http/Status

about = (Request) -> Response {
    Response(Headers(), Status(200))
}

home = (Request) -> Response {
    Response(Headers(), Status(200))
}
